--- a/.travis.yml
+++ b/.travis.yml
@@ -80,9 +80,10 @@ before_install:
 
 script:
     - cd build
+    - travis_wait 50 sleep 3000 &
     - cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_COVERAGE=${COVERAGE} -DPISA_COMPILE_HEADERS=${PISA_COMPILE_HEADERS} ${CMAKE_OPTIONS} ..
     - if [[ "$PISA_COMPILE_HEADERS" != "On" ]]; then 
-        travis_wait 50 make;
+        make -j2;
         ctest -j2;
       fi
 
