Make sure to switch off bound checks for `span` in Release
We might consider checking bounds eventually, but for the
sake of comparison with the baseline, it is important that
we do not do it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,8 @@ target_link_libraries(pisa PUBLIC
     tokenizer
 )
 target_include_directories(pisa PUBLIC external)
+target_compile_definitions(pisa
+    PUBLIC "$<IF:$<CONFIG:DEBUG>,GSL_THROW_ON_CONTRACT_VIOLATION,GSL_UNENFORCED_ON_CONTRACT_VIOLATION>")
 
 if (PISA_BUILD_TOOLS)
     add_subdirectory(tools)
