Fix TBB leaks in tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 **/.DS_Store
 
-build/
+build*/
 data/
 debug/
 pisa_config.hpp
@@ -23,3 +23,5 @@ Testing/
 docs/_build/
 
 node_modules
+
+.clangd/
