Use rapidcheck for testing bitvector

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -116,3 +116,6 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/spdlog)
 
 # Add range-v3
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/range-v3)
+
+# Add RapidCheck
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/rapidcheck)
