--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,7 @@ target_link_libraries(pisa INTERFACE
     fmt::fmt
     range-v3
     optional
+    expected
 )
 target_include_directories(pisa INTERFACE external)
 
