Creating bigram index from query terms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,6 +99,7 @@ target_link_libraries(pisa PUBLIC
     fmt::fmt
     range-v3
     optional
+    yaml-cpp
 )
 target_include_directories(pisa PUBLIC external)
 
