Max scores + maxscore + union-lookup

--- a/v1/CMakeLists.txt
+++ b/v1/CMakeLists.txt
@@ -4,11 +4,14 @@ target_link_libraries(compress pisa CLI11)
 add_executable(query query.cpp)
 target_link_libraries(query pisa CLI11)
 
+add_executable(union-lookup union_lookup.cpp)
+target_link_libraries(union-lookup pisa CLI11)
+
 add_executable(postings postings.cpp)
 target_link_libraries(postings pisa CLI11)
 
 add_executable(score score.cpp)
 target_link_libraries(score pisa CLI11)
 
-add_executable(bigram_index bigram_index.cpp)
-target_link_libraries(bigram_index pisa CLI11)
+add_executable(bigram-index bigram_index.cpp)
+target_link_libraries(bigram-index pisa CLI11)
