--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,25 +19,25 @@
 #  pisa
 #  CLI11
 #)
-#
-#add_executable(queries queries.cpp)
-#target_link_libraries(queries
-#  pisa
-#  CLI11
-#)
-#
+
+add_executable(queries queries.cpp)
+target_link_libraries(queries
+  pisa
+  CLI11
+)
+
 #add_executable(evaluate_queries evaluate_queries.cpp)
 #target_link_libraries(evaluate_queries
 #  pisa
 #  CLI11
 #)
-#
-#add_executable(thresholds thresholds.cpp)
-#target_link_libraries(thresholds
-#  pisa
-#  CLI11
-#)
-#
+
+add_executable(thresholds thresholds.cpp)
+target_link_libraries(thresholds
+  pisa
+  CLI11
+)
+
 #add_executable(profile_queries profile_queries.cpp)
 #target_link_libraries(profile_queries
 #  pisa
