--- a/v1/CMakeLists.txt
+++ b/v1/CMakeLists.txt
@@ -15,3 +15,6 @@ target_link_libraries(bigram-index pisa CLI11)
 
 add_executable(filter-queries filter_queries.cpp)
 target_link_libraries(filter-queries pisa CLI11)
+
+add_executable(threshold threshold.cpp)
+target_link_libraries(threshold pisa CLI11)
