Intersections with JSON

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,7 +111,7 @@ add_subdirectory(src)
 
 if (PISA_ENABLE_TESTING AND BUILD_TESTING)
     enable_testing()
-    #add_subdirectory(test)
+    add_subdirectory(test)
     add_subdirectory(test/v1)
 endif()
 
