--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,11 +20,11 @@
 #  CLI11
 #)
 
-add_executable(queries queries.cpp)
-target_link_libraries(queries
-  pisa
-  CLI11
-)
+#add_executable(queries queries.cpp)
+#target_link_libraries(queries
+#  pisa
+#  CLI11
+#)
 
 #add_executable(evaluate_queries evaluate_queries.cpp)
 #target_link_libraries(evaluate_queries
@@ -89,11 +89,11 @@ target_link_libraries(queries
 #  CLI11
 #)
 
-add_executable(compute_intersection compute_intersection.cpp)
-target_link_libraries(compute_intersection
-  pisa
-  CLI11
-)
+#add_executable(compute_intersection compute_intersection.cpp)
+#target_link_libraries(compute_intersection
+#  pisa
+#  CLI11
+#)
 
 add_executable(lexicon lexicon.cpp)
 target_link_libraries(lexicon
