--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -113,3 +113,9 @@ target_link_libraries(sample_inverted_index
   pisa
   CLI11
 )
+
+add_executable(map_queries map_queries.cpp)
+target_link_libraries(map_queries
+  pisa
+  CLI11
+)
