--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -113,3 +113,9 @@ target_link_libraries(sample_inverted_index
   pisa
   CLI11
 )
+
+add_executable(count_postings count_postings.cpp)
+target_link_libraries(count_postings
+  pisa
+  CLI11
+)
