--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -114,6 +114,12 @@ target_link_libraries(sample_inverted_index
   CLI11
 )
 
+add_executable(map_queries map_queries.cpp)
+target_link_libraries(map_queries
+  pisa
+  CLI11
+)
+
 add_executable(count_postings count_postings.cpp)
 target_link_libraries(count_postings
   pisa
