Add clang-tidy cmake support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 option(PISA_BUILD_TOOLS "Build command line tools." ON)
 option(PISA_ENABLE_TESTING "Enable testing of the library." ON)
 option(PISA_ENABLE_BENCHMARKING "Enable benchmarking of the library." ON)
+option(PISA_ENABLE_CLANG_TIDY "Enable static analysis with clang-tidy" OFF)
 
 configure_file(
   ${PISA_SOURCE_DIR}/include/pisa/pisa_config.hpp.in
@@ -74,6 +75,15 @@ find_package(Threads REQUIRED)
 file(GLOB_RECURSE PISA_SRC_FILES FOLLOW_SYMLINKS "src/*cpp")
 list(SORT PISA_SRC_FILES)
 
+if (PISA_ENABLE_CLANG_TIDY)
+    find_program(CLANGTIDY clang-tidy-9)
+    if(CLANGTIDY)
+        set(CMAKE_CXX_CLANG_TIDY ${CLANGTIDY})
+    else()
+        message(SEND_ERROR "clang-tidy requested but executable not found")
+    endif()
+endif()
+
 include_directories(include)
 add_library(pisa ${PISA_SRC_FILES})
 target_include_directories(pisa PUBLIC
@@ -115,7 +125,6 @@ endif()
 if (PISA_ENABLE_BENCHMARKING)
   add_subdirectory(benchmarks)
 endif()
-
 
 if(PISA_COMPILE_HEADERS)
   get_property(PISA_INTERFACE_INCLUDE_DIRECTORIES TARGET pisa PROPERTY INTERFACE_INCLUDE_DIRECTORIES)
