--- a/.travis.yml
+++ b/.travis.yml
@@ -102,7 +102,8 @@ script:
         CTEST_OUTPUT_ON_FAILURE=TRUE ctest -j2;
       fi
     - if [[ "$CLANG_FORMAT" == "On" ]]; then
-        ./run-clang-format.py -r src/**/*.cpp include/pisa/**/*.hpp tools/*.cpp tools/*.hpp test/*.cpp
+        wget https://raw.githubusercontent.com/Sarcasm/run-clang-format/master/run-clang-format.py
+        python run-clang-format.py -r src/**/*.cpp include/pisa/**/*.hpp tools/*.cpp tools/*.hpp test/*.cpp
       fi
 
 after_success:
