--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ branches:
 common_sources: &all_sources
   - ubuntu-toolchain-r-test
   - llvm-toolchain-xenial-6.0
+  - llvm-toolchain-xenial-9.0
 
 env:
   global:
