--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ branches:
 common_sources: &all_sources
   - ubuntu-toolchain-r-test
   - llvm-toolchain-xenial-6.0
-  - llvm-toolchain-xenial-9.0
+  - llvm-toolchain-xenial-9
 
 env:
   global:
@@ -80,7 +80,7 @@ matrix:
       addons:
           apt:
               sources: *all_sources
-              packages: ['clang-format-9', 'libstdc++-7-dev']
+              packages: ['clang-format-9']
       env: MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0 && COVERAGE=Off && CLANG_FORMAT=On"
     - os: osx
       osx_image: xcode11.2
