Fix readability-braces-around-statements warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,7 +78,7 @@ list(SORT PISA_SRC_FILES)
 if (PISA_ENABLE_CLANG_TIDY)
     find_program(CLANGTIDY clang-tidy)
     if(CLANGTIDY)
-        set(CMAKE_CXX_CLANG_TIDY ${CLANGTIDY} -checks=-*,modernize-loop-convert)
+        set(CMAKE_CXX_CLANG_TIDY ${CLANGTIDY})
     else()
         message(SEND_ERROR "clang-tidy requested but executable not found")
     endif()
