Fix batch process issue

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,7 +1,7 @@
-EXECUTE_PROCESS(COMMAND git submodule update --init
-                WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/..
-                OUTPUT_QUIET
-        )
+#EXECUTE_PROCESS(COMMAND git submodule update --init
+#                WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/..
+#                OUTPUT_QUIET
+#        )
 
 # Add FastPFor
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/FastPFor EXCLUDE_FROM_ALL)
