--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,9 +79,7 @@ list(SORT PISA_SRC_FILES)
 if (PISA_ENABLE_CLANG_TIDY)
     find_program(CLANGTIDY "${PISA_CLANG_TIDY_EXECUTABLE}")
     if(CLANGTIDY)
-        set(
-            CMAKE_CXX_CLANG_TIDY
-            ${CLANGTIDY} --checks=-*,hicpp-use-auto,hicpp-move-const-arg,modernize-loop-convert,readability-braces-around-statements --warnings-as-errors=*)
+        set(CMAKE_CXX_CLANG_TIDY ${CLANGTIDY})
     else()
         message(SEND_ERROR "${PISA_CLANG_TIDY_EXECUTABLE} requested but executable not found")
     endif()
