Tool to invert, reorder, and compress shards.

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -120,4 +120,4 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/range-v3)
 
 # Add RapidCheck
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/rapidcheck)
-target_compile_options(rapidcheck PRIVATE -Wno-error=all)
+target_compile_options(rapidcheck PRIVATE -Wno-error=all -Wno-implicit-int-float-conversion)
