Unify document reordering in one tool (#363)
* Introduce reorder-docids tool

* Unify reordering tools

* Refactor reordering

* Use params instead of builder

* Fix initializer order

* Update document reordering docs

* Update sharding doc

Co-authored-by: Antonio Mallia <me@antoniomallia.it>

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -48,18 +48,6 @@ target_link_libraries(profile_decoding
   pisa
 )
 
-add_executable(shuffle_docids shuffle_docids.cpp)
-target_link_libraries(shuffle_docids
-  pisa
-  CLI11
-)
-
-add_executable(recursive_graph_bisection recursive_graph_bisection.cpp)
-target_link_libraries(recursive_graph_bisection
-  pisa
-  CLI11
-)
-
 add_executable(evaluate_collection_ordering evaluate_collection_ordering.cpp)
 target_link_libraries(evaluate_collection_ordering
   pisa
@@ -139,6 +127,12 @@ target_link_libraries(selective_queries
 
 add_executable(shards shards.cpp)
 target_link_libraries(shards
+  pisa
+  CLI11
+)
+
+add_executable(reorder-docids reorder_docids.cpp)
+target_link_libraries(reorder-docids
   pisa
   CLI11
 )
