--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -136,3 +136,9 @@ target_link_libraries(reorder-docids
   pisa
   CLI11
 )
+
+add_executable(filter-queries filter_queries.cpp)
+target_link_libraries(filter-queries
+  pisa
+  CLI11
+)
